--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8082
-spring.datasource.url=jdbc:postgresql://localhost:5432/secondary_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_core_db
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
