--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,16 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>3.1.2</version>
         </dependency>
-
-
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>6.1.7.Final</version>
         </dependency>
+        <dependency>
+        <groupId>org.hibernate.validator</groupId>
+        <artifactId>hibernate-validator</artifactId>
+            <version>7.0.1.Final</version>
+    </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -67,6 +70,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <version>3.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.214</version>
+            <scope>test</scope>
         </dependency>
 
         <!--    <dependency>-->
@@ -100,11 +109,8 @@
                 <version>0.8.7</version>
                 <configuration>
                     <excludes>
-                        <exclude>com/uktamjon/sodikov/dtos/*</exclude>
-                        <exclude>com/uktamjon/sodikov/domains/*</exclude>
-                        <exclude>com/uktamjon/sodikov/enums/*</exclude>
-                        <exclude>com/uktamjon/sodikov/handlers/*</exclude>
-                        <exclude>com/uktamjon/sodikov/response/*</exclude>
+                        <exclude>com/example/secondarymicrioservice/model/**</exclude>
+                        <exclude>com/example/secondarymicrioservice/repository/*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
