--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,11 @@
             <version>3.1.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+            <version>3.2.3</version>
+        </dependency>
     </dependencies>
 
 
