--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,17 @@
             <artifactId>spring-boot-starter-activemq</artifactId>
             <version>3.2.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>4.2.3</version>
+        </dependency>
+
     </dependencies>
+
+
+
 
 
     <build>
