--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 eureka.client.service-url.defaultZone=http://localhost:8761/
+
+#MongoDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mydb
+spring.data.mongodb.username=mongodb
+spring.data.mongodb.password=123
+
+
+ spring.data.mongodb.authentication-database=admin
+ spring.data.mongodb.uri=mongodb://mongodb:123@localhost:27017/mydb
+
+
