--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,11 @@
             <artifactId>spring-data-mongodb</artifactId>
             <version>4.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
