--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,6 @@
         </dependency>
 
 
-
-
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -44,7 +42,6 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
         </dependency>
-
 
 
         <dependency>
@@ -109,7 +106,6 @@
         </dependency>
 
 
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -136,61 +132,66 @@
     </dependencies>
 
 
-
-
-
     <build>
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.jacoco</groupId>-->
-<!--                <artifactId>jacoco-maven-plugin</artifactId>-->
-<!--                <version>0.8.7</version>-->
-<!--                <configuration>-->
-<!--                    <excludes>-->
-<!--                        <exclude>com/uktamjon/sodikov/dtos/*</exclude>-->
-<!--                        <exclude>com/uktamjon/sodikov/domains/*</exclude>-->
-<!--                        <exclude>com/uktamjon/sodikov/enums/*</exclude>-->
-<!--                        <exclude>com/uktamjon/sodikov/handlers/*</exclude>-->
-<!--                        <exclude>com/uktamjon/sodikov/response/*</exclude>-->
-<!--                        <exclude>com/uktamjon/sodikov/summary/*</exclude>-->
-<!--                    </excludes>-->
-<!--                </configuration>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>initialize</id>-->
-<!--                        <goals>-->
-<!--                            <goal>prepare-agent</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                    <execution>-->
-<!--                        <id>generate-report</id>-->
-<!--                        <goals>-->
-<!--                            <goal>report</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                    <execution>-->
-<!--                        <id>check-code-coverage</id>-->
-<!--                        <goals>-->
-<!--                            <goal>check</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <rules>-->
-<!--                                <rule implementation="org.jacoco.maven.RuleConfiguration">-->
-<!--                                    <element>BUNDLE</element>-->
-<!--                                    <limits>-->
-<!--                                        <limit implementation="org.jacoco.report.check.Limit">-->
-<!--                                            <counter>LINE</counter>-->
-<!--                                            <value>COVEREDRATIO</value>-->
-<!--                                            <minimum>80%</minimum>-->
-<!--                                        </limit>-->
-<!--                                    </limits>-->
-<!--                                </rule>-->
-<!--                            </rules>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
-<!--        </plugins>-->
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.7</version>
+                <configuration>
+                    <excludes>
+                        <exclude>com/uktamjon/sodikov/dtos/*</exclude>
+                        <exclude>com/uktamjon/sodikov/domains/*</exclude>
+                        <exclude>com/uktamjon/sodikov/domains/trainer/*</exclude>
+                        <exclude>com/uktamjon/sodikov/domains/mongoDbSummary/*</exclude>
+                        <exclude>com/uktamjon/sodikov/domains/summary/*</exclude>
+                        <exclude>com/uktamjon/sodikov/enums/*</exclude>
+                        <exclude>com/uktamjon/sodikov/response/*</exclude>
+                        <exclude>com/uktamjon/sodikov/listeners/TrainerWorkloadListener.*</exclude>
+                        <exclude>com/uktamjon/sodikov/config/SecurityConfigurer.*</exclude>-->
+                        <exclude>com/uktamjon/sodikov/config/SecurityConfigurer$*.*</exclude>
+                        <exclude>com/uktamjon/sodikov/config/SpringDataConfigurer.*</exclude>
+                        <exclude>com/uktamjon/sodikov/SecondaryMicroserviceApplication.*</exclude>
+
+
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>initialize</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>generate-report</id>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>check-code-coverage</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule implementation="org.jacoco.maven.RuleConfiguration">
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                        <limit implementation="org.jacoco.report.check.Limit">
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>80%</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
