--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,6 @@
         </dependency>
 
 
-
-
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
@@ -43,7 +41,6 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
         </dependency>
-
 
 
         <dependency>
@@ -113,7 +110,6 @@
         </dependency>
 
 
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -132,65 +128,80 @@
             <artifactId>h2</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>6.2.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-spring</artifactId>
+            <version>6.2.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>6.2.2</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
 
-
-
-
     <build>
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.jacoco</groupId>-->
-<!--                <artifactId>jacoco-maven-plugin</artifactId>-->
-<!--                <version>0.8.7</version>-->
-<!--                <configuration>-->
-<!--                    <excludes>-->
-<!--                        <exclude>com/uktamjon/sodikov/dtos/*</exclude>-->
-<!--                        <exclude>com/uktamjon/sodikov/domains/*</exclude>-->
-<!--                        <exclude>com/uktamjon/sodikov/enums/*</exclude>-->
-<!--                        <exclude>com/uktamjon/sodikov/handlers/*</exclude>-->
-<!--                        <exclude>com/uktamjon/sodikov/response/*</exclude>-->
-<!--                        <exclude>com/uktamjon/sodikov/summary/*</exclude>-->
-<!--                    </excludes>-->
-<!--                </configuration>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>initialize</id>-->
-<!--                        <goals>-->
-<!--                            <goal>prepare-agent</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                    <execution>-->
-<!--                        <id>generate-report</id>-->
-<!--                        <goals>-->
-<!--                            <goal>report</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                    <execution>-->
-<!--                        <id>check-code-coverage</id>-->
-<!--                        <goals>-->
-<!--                            <goal>check</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <rules>-->
-<!--                                <rule implementation="org.jacoco.maven.RuleConfiguration">-->
-<!--                                    <element>BUNDLE</element>-->
-<!--                                    <limits>-->
-<!--                                        <limit implementation="org.jacoco.report.check.Limit">-->
-<!--                                            <counter>LINE</counter>-->
-<!--                                            <value>COVEREDRATIO</value>-->
-<!--                                            <minimum>80%</minimum>-->
-<!--                                        </limit>-->
-<!--                                    </limits>-->
-<!--                                </rule>-->
-<!--                            </rules>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
-<!--        </plugins>-->
+        <!--        <plugins>-->
+        <!--            <plugin>-->
+        <!--                <groupId>org.jacoco</groupId>-->
+        <!--                <artifactId>jacoco-maven-plugin</artifactId>-->
+        <!--                <version>0.8.7</version>-->
+        <!--                <configuration>-->
+        <!--                    <excludes>-->
+        <!--                        <exclude>com/uktamjon/sodikov/dtos/*</exclude>-->
+        <!--                        <exclude>com/uktamjon/sodikov/domains/*</exclude>-->
+        <!--                        <exclude>com/uktamjon/sodikov/enums/*</exclude>-->
+        <!--                        <exclude>com/uktamjon/sodikov/handlers/*</exclude>-->
+        <!--                        <exclude>com/uktamjon/sodikov/response/*</exclude>-->
+        <!--                        <exclude>com/uktamjon/sodikov/summary/*</exclude>-->
+        <!--                    </excludes>-->
+        <!--                </configuration>-->
+        <!--                <executions>-->
+        <!--                    <execution>-->
+        <!--                        <id>initialize</id>-->
+        <!--                        <goals>-->
+        <!--                            <goal>prepare-agent</goal>-->
+        <!--                        </goals>-->
+        <!--                    </execution>-->
+        <!--                    <execution>-->
+        <!--                        <id>generate-report</id>-->
+        <!--                        <goals>-->
+        <!--                            <goal>report</goal>-->
+        <!--                        </goals>-->
+        <!--                    </execution>-->
+        <!--                    <execution>-->
+        <!--                        <id>check-code-coverage</id>-->
+        <!--                        <goals>-->
+        <!--                            <goal>check</goal>-->
+        <!--                        </goals>-->
+        <!--                        <configuration>-->
+        <!--                            <rules>-->
+        <!--                                <rule implementation="org.jacoco.maven.RuleConfiguration">-->
+        <!--                                    <element>BUNDLE</element>-->
+        <!--                                    <limits>-->
+        <!--                                        <limit implementation="org.jacoco.report.check.Limit">-->
+        <!--                                            <counter>LINE</counter>-->
+        <!--                                            <value>COVEREDRATIO</value>-->
+        <!--                                            <minimum>80%</minimum>-->
+        <!--                                        </limit>-->
+        <!--                                    </limits>-->
+        <!--                                </rule>-->
+        <!--                            </rules>-->
+        <!--                        </configuration>-->
+        <!--                    </execution>-->
+        <!--                </executions>-->
+        <!--            </plugin>-->
+        <!--        </plugins>-->
     </build>
 
 </project>
